# TimeCheck

./: .gitignore  BSL.txt  README.md  TimeCheck.spec  pyproject.toml
src/TimeCheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gui/: README.md  _test_me.py  entrypoint.py
src/timecheck/: __init__.py  alerts.py  duration.py  file_loader.py  metrics.py  profiles.py  registry.py  sheets.py  table.py  timecheck.py  triggers.py
